--- a/HelloWorldMvc/Areas/Users/Views/UserHome/Index.cshtml
+++ b/HelloWorldMvc/Areas/Users/Views/UserHome/Index.cshtml
@@ -2,4 +2,28 @@
 @{
     Layout = null;
 }
-<h2>Index Page</h2>
+<h2>Mehrshad Main Page</h2>
+
+<ul>
+    <li>
+        <button type="button">
+            <a asp-area="Users" asp-controller="UserHome" asp-action="SignUp">
+                SignUp
+            </a>
+        </button>
+    </li>
+    <li>
+        <button type="button">
+            <a asp-area="Users" asp-controller="UserHome" asp-action="SignIn">
+                SignIn
+            </a>
+        </button>
+    </li>
+    <li>
+        <button type="button">
+            <a asp-area="UserPannel" asp-controller="UserPannelHome" asp-action="Index">
+                My Profile
+            </a>
+        </button>
+    </li>
+</ul>
